# hand_eye_calib

./: .CMakeLists.txt.swp  CMakeLists.txt  README.md  package.xml
data/: calibration  calibration.cpp  calibration_3d  calibration_3d.cpp  calibration_3d.py  compile_and_create.sh  prepareData  prepareData.cpp  testCalibration  testCalibration.cpp
launch/: hand_eye_calib.launch
src/: hand_eye_calib.txt  hand_eye_calib_2nd_best.txt  hand_eye_calib_3rd_best.txt  hand_eye_calib_4th_best.txt  hand_eye_calib_5th_best.txt  hand_eye_calib_6th_best.txt  hand_eye_calib_best.txt  hand_eye_calib_node.cpp  hand_eye_calib_node_01.cpp  hand_eye_calib_node_02.cpp  hand_eye_calib_node_3_callbacks.cpp  hand_eye_calib_node_from_turtlebot.cpp  hand_eye_calib_node_version_01.cpp  vicon_with_camera.cpp~  vicon_with_camera_devel.cpp  vicon_with_camera_old_try.cpp  vicon_with_camera_synchronized.cpp
